Changes in Slurm-GCP 4.1.4
==========================
 -- Updated Singularity download URL in custom-controller-install script.
 -- Fix static compute nodes being destroyed when exclusive=true

Changes in Slurm-GCP 4.1.3
==========================
 -- Add preliminary spot instance support eg. preemptible_bursting = "spot".
 -- Regularly delete instances corresponding to Slurm nodes that should be
    powered down.
 -- Upgrade to Slurm 21.08.4.
 -- Pin Nvidia driver to 460.106.00-1.
 -- Pin Cuda to 11.2.2.
 -- Pin gcloud to 365.0.1-1 on centos images - workaround broken package.
 -- Enable swap cgroup control on debian images - fixes a slurm compute node
    error.
 -- Add startup scripts as terraform vars.
 -- Fix calling "scontrol ... state=resume" in suspend.py for all nodes
    multiple times for exclusive jobs.

Changes in Slurm-GCP 4.1.2
==========================
 -- setup.py - change LLN=yes to LLN=no

Changes in Slurm-GCP 4.1.1
==========================
 -- slurmsync.py - fix powering up nodes from being downed.

Changes in Slurm-GCP 4.1.0
==========================
 -- suspend.py - now handles "Quota exceeded" error
 -- Support for Intel-select options
 -- slurmrestd - changed user from root to user slurmrestd
 -- resume.py - fix state=down reason being malformed
 -- suspend.py - scontrol update now specifies new state=power_down_force
 -- slurm.conf - update to AccountingStoreFlags=job_comment
 -- slurmsync.py - state flags use new POWERED_DOWN state
 -- Updated Slurm to version 21.08.2

Changes in Slurm-GCP 4.0.4
==========================
 -- Configure sockets, cores, threads on compute nodes for better performace
    with cons_tres.

Changes in Slurm-GCP 4.0.3
==========================
 -- Introduce NEWS file
 -- Recommended image is now
	schedmd-slurm-public/hpc-centos-7-schedmd-slurm-20-11-7
 -- Changed slurmrestd port to 6842 (from 80)
 -- partitions[].image_hyperthreads=false now actively disables hyperthreads