@@ -222,6 +222,11 @@ variable "suspend_time" {
   default     = 300
 }
 
+variable "complete_wait_time" {
+  description = "Time (in sec) to wait before considering a completing job as completed. Warning: high values will reduce schduling throughput. Suggested to keep between 0 and 'suspend_timeout'."
+  default     = 60
+}
+
 variable "zone" {
   description = "Compute Platform zone where the notebook server will be located"
   default     = "us-central1-b"
